--- a/.github/workflows/sync-scripts.yml
+++ b/.github/workflows/sync-scripts.yml
@@ -6,9 +6,9 @@ permissions:
 on:
   push:
     branches:
-      - main  # or master, depending on your default branch
+      - main
     paths:
-      - 'scripts/**'  # Only trigger when files in the scripts directory change
+      - 'scripts/**'
 
 jobs:
   sync:
@@ -23,3 +23,4 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
           CONFIG_PATH: .github/sync.yml
           SKIP_PR: true
+          COMMIT_PREFIX: "synced from fast-bash/scripts"
