--- a/.github/workflows/sync-scripts.yml
+++ b/.github/workflows/sync-scripts.yml
@@ -23,4 +23,4 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
           CONFIG_PATH: .github/sync.yml
           SKIP_PR: true
-          COMMIT_PREFIX: "synced from fast-bash/scripts"
+          COMMIT_PREFIX: "Autosync:"
